# SmartHouse

./: CMakeLists.txt  SmartHouse.ino
screen_yellow_blue_bentley/: CMakeLists.txt  screen_yellow_blue_bentley.cpp
screen_yellow_blue_text/: CMakeLists.txt  readme.txt  screen_yellow_blue_text.cpp
wireless_get/: CMakeLists.txt  wireless_get.cpp
wireless_send/: CMakeLists.txt  readme.txt  wireless_send.cpp
